fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_contract_snapshot_json.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: json
---
{
  "Script": {
    "body": {
      "script_gas_limit": 0,
      "receipts_root": "0000000000000000000000000000000000000000000000000000000000000000",
      "script": [],
      "script_data": []
    },
    "policies": {
      "bits": "Tip | Maturity | MaxFee",
      "values": [
        1,
        0,
        123,
        1000000
      ]
    },
    "inputs": [
      {
        "Contract": {
          "utxo_id": {
            "tx_id": "0101010101010101010101010101010101010101010101010101010101010101",
            "output_index": 2
          },
          "balance_root": "0202020202020202020202020202020202020202020202020202020202020202",
          "state_root": "0303030303030303030303030303030303030303030303030303030303030303",
          "tx_pointer": {
            "block_height": 46,
            "tx_index": 5
          },
          "contract_id": "0505050505050505050505050505050505050505050505050505050505050505"
        }
      }
    ],
    "outputs": [],
    "witnesses": []
  }
}
