fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_contract_snapshot_postcard.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: hex
---
0000000000000000000000000000000000000000000000000000000000000000000000001d04017bc0843dc8030102010101010101010101010101010101010101010101010101010101010101010102020202020202020202020202020202020202020202020202020202020202020203030303030303030303030303030303030303030303030303030303030303032e0505050505050505050505050505050505050505050505050505050505050505050000
