fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_predicate_coin_snapshot_canonical.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: hex
snapshot_kind: text
---
00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001d0000000000000001000000000000000000000000000000000000000000000001000000000000007b00000000000f424000000000000001c80000000000000000010101010101010101010101010101010101010101010101010101010101010100000000000000020202020202020202020202020202020202020202020202020202020202020202000000000000000b0505050505050505050505050505050505050505050505050505050505050505000000000000002e0000000000000005000000000000000000000000000186a0000000000000000a000000000000000c0303030303030303030300000000000004040404040404040404040400000000
